--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ['setuptools', 'wheel', 'numpy', 'h5py']
+requires = ['setuptools', 'wheel', 'pytest', 'numpy', 'h5py', 'ase']
 build-backend = 'setuptools.build_meta'
