Fix installation that now correctly installs dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,13 @@ include_package_data = True
 package_dir =
     = src
 packages = fortformat
+install_requires =
+    wheel
+    setuptools
+    pytest
+    numpy
+    h5py
+    ase
 
 [options.packages.find]
 where = src
