--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,30 @@
-[build-system]
-requires = ['setuptools', 'wheel', 'pytest', 'numpy', 'h5py', 'ase']
-build-backend = 'setuptools.build_meta'
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "fortnet-python"
+version = "0.4"
+authors = [{name = "T. W. van der Heide"},]
+dependencies = ["numpy", "h5py", "ase"]
+requires-python = ">=3.10"
+description = "Python Tools for the Fortnet Software Package"
+readme = {file = "README.rst", content-type = "text/x-rst"}
+license = {text = "BSD"}
+classifiers = [
+  "Development Status :: 5 - Production/Stable",
+  "Intended Audience :: Science/Research",
+  "License :: OSI Approved :: BSD License",
+  "Programming Language :: Python :: 3",
+  "Environment :: Console",
+  "Operating System :: OS Independent",
+  "Topic :: Scientific/Engineering",
+]
+
+[project.urls]
+Homepage = "https://github.com/vanderhe/fortnet-python"
+Documentation = "https://fortnet.readthedocs.io/en/latest/fortformat/index.html"
+Repository = "https://github.com/vanderhe/fortnet-python.git"
+Issues = "https://github.com/vanderhe/fortnet-python/issues"
+
+[project.optional-dependencies]
+test = ["pytest",]
